--- a/rangeseekbar-sample/src/main/res/layout/main.xml
+++ b/rangeseekbar-sample/src/main/res/layout/main.xml
@@ -166,6 +166,29 @@
             rsb:thumbShadowYOffset="2dp"
             />
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="8dp"
+            android:text="Range seek bar with custom drawing thumbs"
+            />
+
+        <org.florescu.android.rangeseekbar.sample.OpposableGraphicsSeekBar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            rsb:absoluteMaxValue="100"
+            rsb:absoluteMinValue="0"
+            rsb:textAboveThumbsColor="@android:color/holo_purple"
+            rsb:thumbDisabled="@drawable/custom_slider_thumb"
+            rsb:thumbNormal="@drawable/custom_slider_thumb"
+            rsb:thumbPressed="@drawable/custom_slider_thumb"
+            rsb:thumbShadow="true"
+            rsb:thumbShadowBlur="3dp"
+            rsb:thumbShadowColor="@color/primary_material_light"
+            rsb:thumbShadowXOffset="1dp"
+            rsb:thumbShadowYOffset="2dp"
+            />
+
 
     </LinearLayout>
 
