Adds further left/right thumb customization.
Due to size changes in the thumbs seekbarVerticalOffset was added to
compensate drawing of the line to match the thumbs' shapes. The left
thumb is still the normal thumb, but you can specify a different right
thumb.

--- a/rangeseekbar/src/main/res/values/attrs.xml
+++ b/rangeseekbar/src/main/res/values/attrs.xml
@@ -8,6 +8,13 @@
         <!-- the maximum of the range -->
         <attr name="absoluteMaxValue" format="integer|float"/>
 
+        <!-- amount of pixels to draw the bar up/down -->
+        <attr name="seekbarVerticalOffset" format="dimension"/>
+
+        <!-- amount of pixels to draw the thumb left/right -->
+        <attr name="thumbLeftOffset" format="dimension"/>
+        <attr name="thumbRightOffset" format="dimension"/>
+
         <!-- show a single slider -->
         <attr name="singleThumb" format="boolean"/>
 
@@ -39,6 +46,9 @@
         <attr name="thumbNormal" format="reference"/>
         <attr name="thumbPressed" format="reference"/>
         <attr name="thumbDisabled" format="reference"/>
+        <attr name="thumbNormalRight" format="reference"/>
+        <attr name="thumbPressedRight" format="reference"/>
+        <attr name="thumbDisabledRight" format="reference"/>
 
         <!-- thumb shadow specifications -->
         <attr name="thumbShadow" format="boolean"/>
